# Click_Me

./: README.md  pyproject.toml  resources.qrc
app/: main.py  setup.py
app/ui/: QProgressBar.py  character.py  character_data.py  choosing_window.py  click_handler.py  game_window.py  main_menu.py  main_window.py  resources_rc.py  settings.py  shop.py
