[tool.poetry]
name = "hentai-clicker"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
steamworkspy = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
